add minha twitch

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     
     <div class="feitoPor">
-        <a href="#" class="feitoPorC">Feito por Criativaria 💖</a>
+        <a href="https://www.twitch.tv/criativaria" target="_blank" class="feitoPorC">Feito por Criativaria 💖</a>
         <a href="https://doceazedo.com" target="_blank"><img src="imgs/doceEsteveAqui.png" alt="" class="doce"></a>
     </div>
      
